fixed issues with headers and alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ body {
 
 .transparent-back {
     max-width: 70%;
-    width: 70%;
+    padding: 1rem;
     background-color: rgb(248, 249, 250);
     background-color: rgba(248, 249, 250, 0.7);
 }
@@ -49,6 +49,10 @@ body {
 .welcome {
     margin-top: 50px;
     padding-top: 25px;
+}
+
+.app-photo{
+    margin-bottom: 3rem;
 }
 
 /*------------------------------------------------------------ band */
@@ -160,13 +164,13 @@ body {
     .transparent-back {
         display: block;
         margin: 2rem auto;
-        
+
     }
 }
 
 @media(min-width:768px) {
     .navigation {
-        display: inline-block;
+        display: block;
     }
 
     .wrapper {
